[tool.poetry]
name = "reinforcement-learning"
version = "0.1.0"
description = ""
authors = ["Darren Colby <dscolby17@gmail.com>"]
readme = "README.md"
packages = [{include = "reinforcement_learning"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
pandas = "^1.5.3"
gym = "^0.26.2"
altair = "^4.2.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
